Tests => component Search component User-info

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "author": "deoliaugusto",
   "license": "MIT",
   "devDependencies": {
+    "jest-fetch-mock": "^3.0.3",
     "msw": "^0.30.0"
   }
 }
